hide signup button when logged in

--- a/travelsFront/app/templates/navbar.hbs
+++ b/travelsFront/app/templates/navbar.hbs
@@ -2,22 +2,23 @@
     <div class="container">
 		<div id="navbar">
 			<h2>Welcome to Travel Expenses!</h2>
-			<ul class="nav navbar-nav">
-
-                {{#link-to "profile" tagName="li"}}<a href="">Προφίλ</a>{{/link-to}}
-                {{#link-to "petition" tagName="li"}}<a href="">Νέα Αίτηση</a>{{/link-to}}
-			</ul>
-
-            <ul class="nav navbar-nav navbar-right">
-                {{#link-to "signup" tagName="li"}}<a href="">Signup</a>{{/link-to}}
-
-        		{{#if session.isAuthenticated}}
-					<a {{action "invalidateSession"}}>Logout</a> 
+			
+			
+               	{{#if session.isAuthenticated}}
+               	<ul class="nav navbar-nav navbar-right">
+					<a {{action "invalidateSession"}}>Logout</a>
+				</ul>	
+				<ul class="nav navbar-nav navbar-left">
+					{{#link-to "profile" tagName="li"}}<a href="">Προφίλ</a>{{/link-to}}
+                	{{#link-to "petition" tagName="li"}}<a href="">Νέα Αίτηση</a>{{/link-to}}
+				</ul> 
 				{{else}}
+				<ul class="nav navbar-nav navbar-right">
+					{{#link-to "signup" tagName="li"}}<a href="">Signup</a>{{/link-to}}
 					{{#link-to "login" tagName="li"}}<a href="">Login</a>{{/link-to}}
+				</ul>	
 				{{/if}}
-                
-            </ul>
+            
 		</div>
 	</div>
 </nav>
