add logged in user in navbar

--- a/travelsFront/app/templates/navbar.hbs
+++ b/travelsFront/app/templates/navbar.hbs
@@ -6,6 +6,7 @@
 			
                	{{#if session.isAuthenticated}}
                	<ul class="nav navbar-nav navbar-right">
+               		<div>Logged in as: {{username}}</div>
 					<a {{action "invalidateSession"}}>Logout</a>
 				</ul>	
 				<ul class="nav navbar-nav navbar-left">
