comment out 'logged in as' message

--- a/travelsFront/app/templates/profile.hbs
+++ b/travelsFront/app/templates/profile.hbs
@@ -1,6 +1,6 @@
 <div class="container">
 
-	<label for="username">Logged in as: <font color="green">{{model.username}}</font></label>
+	<!-- <label for="username">Logged in as: <font color="green">{{model.username}}</font></label> -->
 	<form class="form-horizontal col-md-10"  {{action "profileUpdate" on="submit"}}>
 
 		<div class="profileForm form-group">
