--- a/travelsFront/app/templates/petition.hbs
+++ b/travelsFront/app/templates/petition.hbs
@@ -83,16 +83,14 @@
 		<div class="profileForm form-group">
 			<label for="taskStartDate" class="col-sm-4 control-label">Ημ/νία - Ώρα Έναρξης Εργασιών</label>
 		<div class="col-sm-8">	
-			{{input value=model.taskStartDate type="date" class="form-control" autofocus="autofocus"}}
-			{{input value=model.taskStartTime type="time" class="form-control" autofocus="autofocus"}}
+			{{input value=model.taskStartDate type="datetime-local" class="form-control" autofocus="autofocus"}}
 		</div>
 		</div>
 
 		<div class="profileForm form-group">
 			<label for="taskEndDate" class="col-sm-4 control-label">Ημ/νία - Ώρα Λήξης Εργασιών</label>
 		<div class="col-sm-8">	
-			{{input value=model.taskEndDate type="date" class="form-control" autofocus="autofocus"}}
-			{{input value=model.taskEndTime type="time" class="form-control" autofocus="autofocus"}}
+			{{input value=model.taskEndDate type="datetime-local" class="form-control" autofocus="autofocus"}}
 		</div>
 		</div>
 
