--- a/travelsFront/app/templates/petition.hbs
+++ b/travelsFront/app/templates/petition.hbs
@@ -1,125 +1,125 @@
 <div class="container">
 	<form class="form-horizontal col-md-12 leftForm" role="form" {{action "petitionUpdate" on="submit"}}>
 
-	<div class="col-md-6 leftForm">
-	 {{partial 'petition-profile'}}
-	</div>
-
-	<div class="col-md-6 rightForm">	
-
-		<h4>Στοιχεία Αίτησης Ταξιδιού</h4><br>
-
-		<div class="profileForm form-group">
-			<label for="movementCategory" class="col-sm-4 control-label">Κατηγορία Μετακίνησης</label><br>
-		<div class="col-sm-8">
-			<select onchange={{action "setMovementCategory" value="target.value"}}>
-				{{#each movement-categories as |movementCategoryChoice|}}
-				<option value={{movementCategoryChoice.id}} selected={{eq movementCategoryChoice.id model.movementCategoryChoice.id}}>{{movementCategoryChoice.name}}</option>
-				{{/each}}
-			</select>				
-		</div>
-		</div> 
-
-		<div class="profileForm form-group">
-			<label for="project" class="col-sm-4 control-label">Έργο</label>
-		<div class="col-sm-8">
-			<select onchange={{action "setProject" value="target.value"}}>
-				{{#each projects as |projectChoice|}}
-				<option value={{projectChoice.id}} selected={{eq projectChoice.id model.projectChoice.id}}>{{projectChoice.name}}</option>
-				{{/each}}
-			</select>	
-		</div>
+		<div class="col-md-6 leftForm">
+			{{partial 'petition-profile'}}
 		</div>
 
-		<div class="profileForm form-group">
-			<label for="taskStartDate" class="col-sm-4 control-label">Ημ/νία - Ώρα Έναρξης Εργασιών</label>
-		<div class="col-sm-8">	
-			{{input value=model.taskStartDate type="datetime-local" class="form-control" autofocus="autofocus"}}
-		</div>
-		</div>
+		<div class="col-md-6 rightForm">	
 
-		<div class="profileForm form-group">
-			<label for="taskEndDate" class="col-sm-4 control-label">Ημ/νία - Ώρα Λήξης Εργασιών</label>
-		<div class="col-sm-8">	
-			{{input value=model.taskEndDate type="datetime-local" class="form-control" autofocus="autofocus"}}
-		</div>
-		</div>
+			<h4>Στοιχεία Αίτησης Ταξιδιού</h4><br>
 
-		<div class="profileForm form-group">
-			<label for="departurePoint" class="col-sm-4 control-label">Τόπος Αναχώρησης</label>
-		<div class="col-sm-8">
-			<select onchange={{action "setDeparturePoint" value="target.value"}}>
-				{{#each departure-points as |departurePointChoice|}}
-				<option value={{departurePointChoice.id}} selected={{eq departurePointChoice.id model.departurePointChoice.id}}>{{departurePointChoice.name}}</option>
-				{{/each}}
-			</select>	
-		</div>
-		</div>
+			<div class="profileForm form-group">
+				<label for="movementCategory" class="col-sm-4 control-label">Κατηγορία Μετακίνησης</label><br>
+				<div class="col-sm-8">
+					<select onchange={{action "setMovementCategory" value="target.value"}}>
+						{{#each movement-categories as |movementCategoryChoice|}}
+						<option value={{movementCategoryChoice.id}} selected={{eq movementCategoryChoice.id model.movementCategory.id}}>{{movementCategoryChoice.name}}</option>
+						{{/each}}
+					</select>				
+				</div>
+			</div> 
 
-		<div class="profileForm form-group">
-			<label for="arrivalPoint" class="col-sm-4 control-label">Τόπος Προορισμού</label>
-		<div class="col-sm-8">	
-			<select onchange={{action "setArrivalPoint" value="target.value"}}>
-				{{#each arrival-points as |arrivalPointChoice|}}
-				<option value={{arrivalPointChoice.id}} selected={{eq arrivalPointChoice.id model.arrivalPointChoice.id}}>{{arrivalPointChoice.name}}</option>
-				{{/each}}
-			</select>
-		</div>
-		</div>
+			<div class="profileForm form-group">
+				<label for="project" class="col-sm-4 control-label">Έργο</label>
+				<div class="col-sm-8">
+					<select onchange={{action "setProject" value="target.value"}}>
+						{{#each projects as |projectChoice|}}
+						<option value={{projectChoice.id}} selected={{eq projectChoice.id model.project.id}}>{{projectChoice.name}}</option>
+						{{/each}}
+					</select>	
+				</div>
+			</div>
 
-		<div class="profileForm form-group">
-			<label for="transportation" class="col-sm-4 control-label">Μέσο Μετακίνησης</label>
-		<div class="col-sm-8">	
-			<select onchange={{action "setTransportation" value="target.value"}}>
-				{{#each transportations as |transportationChoice|}}
-				<option value={{transportationChoice.id}} selected={{eq transportationChoice.id model.transportationChoice.id}}>{{transportationChoice.name}}</option>
-				{{/each}}
-			</select>
-		</div>
-		</div> 
+			<div class="profileForm form-group">
+				<label for="taskStartDate" class="col-sm-4 control-label">Ημ/νία - Ώρα Έναρξης Εργασιών</label>
+				<div class="col-sm-8">	
+					{{input value=model.taskStartDate type="datetime-local" class="form-control" autofocus="autofocus"}}
+				</div>
+			</div>
 
-		<div class="profileForm form-group">
-			<label for="reason" class="col-sm-4 control-label">Αιτιολογία Μετακίνησης</label>
-		<div class="col-sm-8">	
-			{{#character-limit max=100}}
-			{{textarea value=model.reason type="textarea" class="form-control" autofocus="autofocus"}}
-			{{/character-limit}}
-		</div>
-		</div>
+			<div class="profileForm form-group">
+				<label for="taskEndDate" class="col-sm-4 control-label">Ημ/νία - Ώρα Λήξης Εργασιών</label>
+				<div class="col-sm-8">	
+					{{input value=model.taskEndDate type="datetime-local" class="form-control" autofocus="autofocus"}}
+				</div>
+			</div>
 
-		<div class="profileForm form-group">
-			<label for="recTransport" class="col-sm-4 control-label">Προτεινόμενα Μέσα Μετακίνησης</label>
-		<div class="col-sm-8">	
-			{{#character-limit max=100}}
-			{{textarea value=model.recTransport type="text" class="form-control" autofocus="autofocus"}}
-			{{/character-limit}}
-		</div>
-		</div>
+			<div class="profileForm form-group">
+				<label for="departurePoint" class="col-sm-4 control-label">Τόπος Αναχώρησης</label>
+				<div class="col-sm-8">
+					<select onchange={{action "setDeparturePoint" value="target.value"}}>
+						{{#each departure-points as |departurePointChoice|}}
+						<option value={{departurePointChoice.id}} selected={{eq departurePointChoice.id model.departurePoint.id}}>{{departurePointChoice.name}}</option>
+						{{/each}}
+					</select>	
+				</div>
+			</div>
 
-		<div class="profileForm form-group">
-			<label for="recAccomondation" class="col-sm-4 control-label">Προτεινόμενο Κατάλυμα</label>
-		<div class="col-sm-8">	
-			{{#character-limit max=100}}
-			{{textarea value=model.recAccomondation type="textarea" class="form-control" autofocus="autofocus"}}
-			{{/character-limit}}
-		</div>
-		</div>
+			<div class="profileForm form-group">
+				<label for="arrivalPoint" class="col-sm-4 control-label">Τόπος Προορισμού</label>
+				<div class="col-sm-8">	
+					<select onchange={{action "setArrivalPoint" value="target.value"}}>
+						{{#each arrival-points as |arrivalPointChoice|}}
+						<option value={{arrivalPointChoice.id}} selected={{eq arrivalPointChoice.id model.arrivalPoint.id}}>{{arrivalPointChoice.name}}</option>
+						{{/each}}
+					</select>
+				</div>
+			</div>
 
-		<div class="profileForm form-group">
-			<label for="recCostParticipation" class="col-sm-4 control-label">Κόστος Συμμετοχής</label>
-		<div class="col-sm-8">	
-			{{#character-limit max=100}}
-			{{textarea value=model.recCostParticipation type="textarea" class="form-control" autofocus="autofocus"}}
-			{{/character-limit}}
-		</div>
-		</div>
-	</div>	
-	
+			<div class="profileForm form-group">
+				<label for="transportation" class="col-sm-4 control-label">Μέσο Μετακίνησης</label>
+				<div class="col-sm-8">	
+					<select onchange={{action "setTransportation" value="target.value"}}>
+						{{#each transportations as |transportationChoice|}}
+						<option value={{transportationChoice.id}} selected={{eq transportationChoice.id model.transportation.id}}>{{transportationChoice.name}}</option>
+						{{/each}}
+					</select>
+				</div>
+			</div> 
+
+			<div class="profileForm form-group">
+				<label for="reason" class="col-sm-4 control-label">Αιτιολογία Μετακίνησης</label>
+				<div class="col-sm-8">	
+					{{#character-limit max=100}}
+					{{textarea value=model.reason type="textarea" class="form-control" autofocus="autofocus"}}
+					{{/character-limit}}
+				</div>
+			</div>
+
+			<div class="profileForm form-group">
+				<label for="recTransport" class="col-sm-4 control-label">Προτεινόμενα Μέσα Μετακίνησης</label>
+				<div class="col-sm-8">	
+					{{#character-limit max=100}}
+					{{textarea value=model.recTransport type="text" class="form-control" autofocus="autofocus"}}
+					{{/character-limit}}
+				</div>
+			</div>
+
+			<div class="profileForm form-group">
+				<label for="recAccomondation" class="col-sm-4 control-label">Προτεινόμενο Κατάλυμα</label>
+				<div class="col-sm-8">	
+					{{#character-limit max=100}}
+					{{textarea value=model.recAccomondation type="textarea" class="form-control" autofocus="autofocus"}}
+					{{/character-limit}}
+				</div>
+			</div>
+
+			<div class="profileForm form-group">
+				<label for="recCostParticipation" class="col-sm-4 control-label">Κόστος Συμμετοχής</label>
+				<div class="col-sm-8">	
+					{{#character-limit max=100}}
+					{{textarea value=model.recCostParticipation type="textarea" class="form-control" autofocus="autofocus"}}
+					{{/character-limit}}
+				</div>
+			</div>
+		</div>	
+		<button type="save" class="btn btn-primary">Αποθήκευση Στοιχείων</button>
+		<button type="submit" class="btn btn-primary">Υποβολή Αίτησης</button>
+
+
 	</form><br>
-	
-	<button type="save" class="btn btn-primary">Αποθήκευση Στοιχείων</button>
-	<button type="submit" class="btn btn-primary">Υποβολή Αίτησης</button>
-	
+
 </div>
 
 {{outlet}}
