Assign specific status values on form save or submit

--- a/travelsFront/app/templates/petition.hbs
+++ b/travelsFront/app/templates/petition.hbs
@@ -1,5 +1,5 @@
 <div class="container">
-	<form class="form-horizontal col-md-12 leftForm" role="form" {{action "petitionUpdate" on="submit"}}>
+	<form class="form-horizontal col-md-12 leftForm" role="form" {{action "petitionCreate" on="submit"}}>
 
 		<div class="col-md-6 leftForm">
 			{{partial 'petition-profile'}}
@@ -15,7 +15,7 @@
 					<select onchange={{action "setMovementCategory" value="target.value"}}>
 						<option value=""></option>
 						{{#each movement-categories as |movementCategoryChoice|}}
-							<option value={{movementCategoryChoice.id}} selected={{eq movementCategoryChoice.id model.movementCategory.id}}>{{movementCategoryChoice.name}}</option>
+						<option value={{movementCategoryChoice.id}} selected={{eq movementCategoryChoice.id model.movementCategory.id}}>{{movementCategoryChoice.name}}</option>
 						{{/each}}
 					</select>				
 				</div>
@@ -27,7 +27,7 @@
 					<select onchange={{action "setProject" value="target.value"}}>
 						<option value=""></option>
 						{{#each projects as |projectChoice|}}
-							<option value={{projectChoice.id}} selected={{eq projectChoice.id model.project.id}}>{{projectChoice.name}}</option>
+						<option value={{projectChoice.id}} selected={{eq projectChoice.id model.project.id}}>{{projectChoice.name}}</option>
 						{{/each}}
 					</select>	
 				</div>
@@ -54,7 +54,7 @@
 						<option value=""></option>
 
 						{{#each departure-points as |departurePointChoice|}}
-							<option value={{departurePointChoice.id}} selected={{eq departurePointChoice.id model.departurePoint.id}}>{{departurePointChoice.name}}</option>
+						<option value={{departurePointChoice.id}} selected={{eq departurePointChoice.id model.departurePoint.id}}>{{departurePointChoice.name}}</option>
 						{{/each}}
 					</select>	
 				</div>
@@ -67,11 +67,12 @@
 						<option value=""></option>
 
 						{{#each arrival-points as |arrivalPointChoice|}}
-							<option value={{arrivalPointChoice.id}} selected={{eq arrivalPointChoice.id model.arrivalPoint.id}}>{{arrivalPointChoice.name}}</option>
+						<option value={{arrivalPointChoice.id}} selected={{eq arrivalPointChoice.id model.arrivalPoint.id}}>{{arrivalPointChoice.name}}</option>
 						{{/each}}
 					</select>
 				</div>
 			</div>
+
 
 			<div class="profileForm form-group">
 				<label for="transportation" class="col-sm-4 control-label">Μέσο Μετακίνησης</label>
@@ -80,7 +81,7 @@
 						<option value=""></option>
 
 						{{#each transportations as |transportationChoice|}}
-							<option value={{transportationChoice.id}} selected={{eq transportationChoice.id model.transportation.id}}>{{transportationChoice.name}}</option>
+						<option value={{transportationChoice.id}} selected={{eq transportationChoice.id model.transportation.id}}>{{transportationChoice.name}}</option>
 						{{/each}}
 					</select>
 				</div>
@@ -90,7 +91,7 @@
 				<label for="reason" class="col-sm-4 control-label">Αιτιολογία Μετακίνησης</label>
 				<div class="col-sm-8">	
 					{{#character-limit max=100}}
-						{{textarea value=model.reason type="textarea" class="form-control" autofocus="autofocus"}}
+					{{textarea value=model.reason type="textarea" class="form-control" autofocus="autofocus"}}
 					{{/character-limit}}
 				</div>
 			</div>
@@ -99,7 +100,7 @@
 				<label for="recTransport" class="col-sm-4 control-label">Προτεινόμενα Μέσα Μετακίνησης</label>
 				<div class="col-sm-8">	
 					{{#character-limit max=100}}
-						{{textarea value=model.recTransport type="text" class="form-control" autofocus="autofocus"}}
+					{{textarea value=model.recTransport type="text" class="form-control" autofocus="autofocus"}}
 					{{/character-limit}}
 				</div>
 			</div>
@@ -108,7 +109,7 @@
 				<label for="recAccomondation" class="col-sm-4 control-label">Προτεινόμενο Κατάλυμα</label>
 				<div class="col-sm-8">	
 					{{#character-limit max=100}}
-						{{textarea value=model.recAccomondation type="textarea" class="form-control" autofocus="autofocus"}}
+					{{textarea value=model.recAccomondation type="textarea" class="form-control" autofocus="autofocus"}}
 					{{/character-limit}}
 				</div>
 			</div>
@@ -117,7 +118,7 @@
 				<label for="recCostParticipation" class="col-sm-4 control-label">Κόστος Συμμετοχής</label>
 				<div class="col-sm-8">	
 					{{#character-limit max=100}}
-						{{textarea value=model.recCostParticipation type="textarea" class="form-control" autofocus="autofocus"}}
+					{{textarea value=model.recCostParticipation type="textarea" class="form-control" autofocus="autofocus"}}
 					{{/character-limit}}
 				</div>
 			</div>
