--- a/travelsFront/app/templates/petition-profile.hbs
+++ b/travelsFront/app/templates/petition-profile.hbs
@@ -1,71 +1,80 @@
-		<h4>Στοιχεία Προφίλ</h4><br>
+<h4>Στοιχεία Προφίλ</h4><br>
 
-		<div class="profileForm form-group">
-			<label for="first_name" class="col-sm-2 control-label">Όνομα</label>
-		<div class="col-sm-4">
-			{{input value=profile.first_name type="text" class="form-control" autofocus="autofocus"}}
-		</div>
-		</div>
+<div class="profileForm form-group">
+	<label for="first_name" class="col-sm-2 control-label">Όνομα</label>
+	<div class="col-sm-4">
+		{{input value=profile.first_name type="text" class="form-control" autofocus="autofocus"}}
+	</div>
+</div>
 
-		<div class="profileForm form-group">
-			<label for="last_name" class="col-sm-2 control-label">Επώνυμο</label>
-		<div class="col-sm-4">	
-			{{input value=model.last_name type="text" class="form-control" autofocus="autofocus"}}
-		</div>
-		</div>
+<div class="profileForm form-group">
+	<label for="last_name" class="col-sm-2 control-label">Επώνυμο</label>
+	<div class="col-sm-4">	
+		{{input value=model.last_name type="text" class="form-control" autofocus="autofocus"}}
+	</div>
+</div>
 
-		<div class="profileForm form-group">
-			<label for="iban" class="col-sm-2 control-label">IBAN</label>
-		<div class="col-sm-4">	
-			{{input value=model.iban type="text" class="form-control" autofocus="autofocus"}}
-		</div>
-		</div> 
+<div class="profileForm form-group">
+	<label for="iban" class="col-sm-2 control-label">IBAN</label>
+	<div class="col-sm-4">	
+		{{input value=model.iban type="text" class="form-control" autofocus="autofocus"}}
+	</div>
+	{{#if (v-get model 'iban' 'isInvalid') }}
+	<font color="red">{{v-get model 'iban' 'message'}}</font>
+	{{/if}} 
 
-		<div class="profileForm form-group">
-			<label for="specialtyID" class="col-sm-2 control-label">Ειδικότητα</label>
-		<div class="col-sm-4">	
-			<select onchange={{action "setSpecialty" value="target.value"}}>
-				<option value=""></option>
+</div> 
 
-				{{#each specialties as |specialtyChoice|}}
-				<option value={{specialtyChoice.id}} selected={{eq specialtyChoice.id model.specialtyID.id}}>{{specialtyChoice.name}}</option>
+<div class="profileForm form-group">
+	<label for="specialtyID" class="col-sm-2 control-label">Ειδικότητα</label>
+	<div class="col-sm-4">	
+		<select onchange={{action "setSpecialty" value="target.value"}}>
+			<option value=""></option>
 
-				{{/each}}
-			</select>		
-		</div>
-		</div> 
+			{{#each specialties as |specialtyChoice|}}
+			<option value={{specialtyChoice.id}} selected={{eq specialtyChoice.id model.specialtyID.id}}>{{specialtyChoice.name}}</option>
 
-		<div class="profileForm form-group">
-			<label for="kind" class="col-sm-2 control-label">Ιδιότητα</label>
-		<div class="col-sm-4">	
-			<select onchange={{action "setKind" value="target.value"}}>
-				<option value=""></option>
+			{{/each}}
+		</select>		
+	</div>
+</div> 
 
-				{{#each kinds as |kindChoice|}}
+<div class="profileForm form-group">
+	<label for="kind" class="col-sm-2 control-label">Ιδιότητα</label>
+	<div class="col-sm-4">	
+		<select onchange={{action "setKind" value="target.value"}}>
+			<option value=""></option>
 
-				<option value={{kindChoice.id}} selected={{eq kindChoice.id model.userKind.id}}>{{kindChoice.name}}</option>
+			{{#each kinds as |kindChoice|}}
 
-				{{/each}}
-			</select>
-		</div>
-		</div>
+			<option value={{kindChoice.id}} selected={{eq kindChoice.id model.userKind.id}}>{{kindChoice.name}}</option>
 
-		<div class="profileForm form-group">
-			<label for="taxRegNum" class="col-sm-2 control-label">ΑΦΜ</label>
-		<div class="col-sm-4">	
-			{{input value=model.taxRegNum type="text" class="form-control" autofocus="autofocus"}}
-		</div>
-		</div>
+			{{/each}}
+		</select>
+	</div>
+</div>
 
-		<div class="profileForm form-group">
-			<label for="taxOffice" class="col-sm-2 control-label">ΔΟΥ</label>
-		<div class="col-sm-4">	
-			<select onchange={{action "setTaxOffice" value="target.value"}}>
-				{{#each tax-offices  as |taxOfficeChoice|}}
+<div class="profileForm form-group">
+	<label for="taxRegNum" class="col-sm-2 control-label">ΑΦΜ</label>
+	<div class="col-sm-4">	
+		{{input value=model.taxRegNum type="text" class="form-control" autofocus="autofocus"}}
 
-				<option value={{taxOfficeChoice.id}} selected={{eq taxOfficeChoice.id model.taxOffice.id}}>{{taxOfficeChoice.name}}</option>
+	</div>
+	{{#if (v-get model 'taxRegNum' 'isInvalid') }}
+	<font color="red">{{v-get model 'taxRegNum' 'message'}}</font>
+	{{/if}}
 
-				{{/each}}
-			</select>
-		</div>
-		</div>
+</div>
+
+<div class="profileForm form-group">
+	<label for="taxOffice" class="col-sm-2 control-label">ΔΟΥ</label>
+	<div class="col-sm-4">	
+		<select onchange={{action "setTaxOffice" value="target.value"}}>
+			{{#each tax-offices  as |taxOfficeChoice|}}
+
+			<option value={{taxOfficeChoice.id}} selected={{eq taxOfficeChoice.id model.taxOffice.id}}>{{taxOfficeChoice.name}}</option>
+
+			{{/each}}
+		</select>
+	</div>
+</div>
